# CSTest

./: CMakeLists.txt  README.md  build.bat
cpu/: CallExample.cpp  CallExample.h  FiniteDiff.h  PDESolver.cpp  PDESolver.h  main.cpp
gpu/: cudaHelper.h  finiteDiff.h  formula.h  main.cu  optimisations.h
toolchains/: VS19.cmake  gcc-avx2.cmake
toolchains/flags/: AVX.cmake  AVX2.cmake  vs.cmake
